<?xml version="1.0"?>
<package>
  <name>roseus_msgs</name>
  <version>1.1.8</version>
  <description>Special package that generates roseus msgs for all installed packages</description>

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geneus</build_depend>

  <!-- this build depends is commented in at jsk_roseus-release -->
<!--
  <build_depend>rviz</build_depend>
  <build_depend>moveit_full_pr2</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>pr2eus</build_depend>
  <build_depend>jsk_common</build_depend>
  <build_depend>jsk_recognition</build_depend>
  -->
<!-- not supported in groovy 
  <build_depend>pr2_msgs</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>audio_common</build_depend>
  not supported in groovy -->

  <run_depend>geneus</run_depend>

</package>