<package>
  <name>roseus_smach</name>
  <version>1.1.33</version>
  <description>roseus_smach

     * Euslisp state machine class. it will be moved.
     * Message publisher for visualizing current state by smach_viewer.
     * Simple pickle dump script for debugging state machine.
     * Execute state machine as a action server.</description>

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/roseus_smach</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Manabu Saito</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>euslisp</build_depend>
  <build_depend>roseus</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>smach_ros</build_depend>
  <build_depend>smach_msgs</build_depend>

  <run_depend>euslisp</run_depend>
  <run_depend>roseus</run_depend>
  <run_depend>smach</run_depend>
  <run_depend>smach_ros</run_depend>
  <run_depend>smach_msgs</run_depend>

  <!-- <test_depend>euslisp</test_depend> -->
  <!-- <test_depend>roseus</test_depend> -->

  <export>

  </export>
</package>
