<package>
  <name>roseus_tutorials</name>
  <version>1.7.4</version>
  <description>roseus_tutorials
 </description>

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/roseus_tutorials</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Manabu Saito</author>
  <author>Tsukasa Ito</author>
  <author>Kei Okada</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roseus</build_depend>

  <run_depend>uvc_camera</run_depend>
  <run_depend>ar_track_alvar</run_depend>
  <run_depend>opencv_apps</run_depend>
  <!-- <run_depend>saliency_tracking<run_depend> -->
  <!-- <depend package="cmvision" /> -->
  <!-- <run_depend>checkerboard_pose</run_depend> -->
  <!-- <run_depend>face_detector_mono<run_depend> -->
  <!-- <depend package="aques_talk" /> -->
  <run_depend>checkerboard_detector</run_depend>
  <!-- run depends on pr2eus has circular dependencies, so removed from package.xml -->
  <!-- <run_depend>pr2eus</run_depend> -->
  <run_depend>image_proc</run_depend>
  <run_depend>image_view2</run_depend>
  <run_depend>posedetection_msgs</run_depend>
  <!-- <run_depend>jsk_perception</run_depend> -->
  <run_depend>visualization_msgs</run_depend>
  <run_depend>jsk_recognition_msgs</run_depend>
  <!-- <run_depend>tabletop_object_detector</run_depend> -->

  <test_depend>jsk_pcl_ros</test_depend>
  <test_depend>rostest</test_depend>
  <export>
  </export>
</package>
